# AndroidH264

./: settings.gradle
app/: build.gradle
app/release/: app-release.apk  output-metadata.json
app/release/app-release/: AndroidManifest.xml  classes.dex  resources.arsc
app/release/app-release/res/: -Y.xml  -o.xml  1N.xml  30.xml  38.xml  4G.xml  5A.xml  6J.xml  75.xml  8_.xml  9A.xml  AK.xml  Am.xml  BA.xml  C7.xml  Cm.xml  Ej-1.xml  Ex.xml  FR.xml  Hy.xml  I-.xml  Ig.xml  Jn.xml  Ly.xml  NA.xml  Os.xml  Qc.xml  R5-1.xml  R6.xml  SH.xml  SS.xml  TK.xml  TP.xml  UO.xml  V9.xml  Wl.xml  Wn.xml  XS.xml  Y-.xml  ZW.xml  (+28 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  H264Android.c
app/src/main/java/com/quang/androidh264/: H264Decoder.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
